# promesa

./: .gitignore  README.md  modules.xml  nx.json  package-lock.json  package.json  tsconfig.base.json
apps/promesa/: jest.config.ts  project.json
apps/promesa-desktop/: .gitignore  project.json
apps/promesa-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/promesa-desktop/src-tauri/capabilities/: default.json
apps/promesa-desktop/src-tauri/src/: main.rs
apps/promesa-e2e/: playwright.config.ts  project.json
apps/promesa/src/: index.html  styles.less
apps/promesa/src/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts  nx-welcome.component.ts
apps/promesa/src/app/notes-page/: notes-page.component.html  notes-page.component.less  notes-page.component.ts
apps/promesa/src/app/todo/: todo-edit.component.ts  todo.service.ts
