[package]
name = "promesa_desktop"
version = "0.1.0"
description = "Tauri desktop application for Promesa"
authors = ["Promesa Developers"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
